@@ -2,37 +2,83 @@ package be.kdg.prog6.gameStatisticsContext.adapter.out;
 
 import be.kdg.prog6.gameStatisticsContext.domain.*;
 import be.kdg.prog6.gameStatisticsContext.port.out.CreateMatchSessionPort;
+import be.kdg.prog6.gameStatisticsContext.port.out.LoadMatchSessionsPort;
 import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Component;
 
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
-public class MatchSessionDbAdapter implements CreateMatchSessionPort {
+public class MatchSessionDbAdapter implements LoadMatchSessionsPort, CreateMatchSessionPort {
     private final MatchSessionRepository matchSessionRepo;
-    private final GameStatisticsDbAdapter gameStatisticsDbAdapter;
+    private final GameStatisticsRepository gameStatisticsRepo;
 
-    public MatchSessionDbAdapter(MatchSessionRepository matchSessionRepo, GameStatisticsDbAdapter gameStatisticsDbAdapter) {
+    public MatchSessionDbAdapter(MatchSessionRepository matchSessionRepo, GameStatisticsRepository gameStatisticsRepo) {
         this.matchSessionRepo = matchSessionRepo;
-        this.gameStatisticsDbAdapter = gameStatisticsDbAdapter;
+        this.gameStatisticsRepo = gameStatisticsRepo;
+    }
+
+    @Transactional
+    @Override
+    public List<MatchSession> loadMatchSessionsByGameStatistics(GameStatistics gameStatistics) {
+        Optional<GameStatisticsJpaEntity> gameStatisticsJpaEntityOpt = gameStatisticsRepo.findByPlayerIdAndGameId(
+                gameStatistics.getPlayerId().id(), gameStatistics.getGameId().id());
+        if (gameStatisticsJpaEntityOpt.isEmpty()) {
+            throw new IllegalArgumentException("GameStatistics not found");
+        }
+        GameStatisticsJpaEntity gameStatisticsJpaEntity = gameStatisticsJpaEntityOpt.get();
+        List<MatchSessionJpaEntity> matchSessionJpaEntities = matchSessionRepo.findAllByGameStatisticsIn(List.of(gameStatisticsJpaEntity));
+        return matchSessionJpaEntities.stream().map(this::toMatchSession).toList();
     }
 
     @Transactional
     @Override
     public void createMatchSession(MatchSession matchSession) {
-        List<GameStatisticsJpaEntity> gameStatisticsJpaEntities = List.copyOf(matchSession.getGameStatistics().stream().map(gameStatistics -> new GameStatisticsJpaEntity(gameStatistics.getPlayerId().id(), gameStatistics.getGameId().id(), gameStatistics.getTotalScore(), gameStatistics.getTotalGamesPlayed(), gameStatistics.getWins(), gameStatistics.getLosses(), gameStatistics.getDraws(), gameStatistics.getWinLossRatio(), gameStatistics.getTotalTimePlayed(), gameStatistics.getHighestScore(), gameStatistics.getMovesMade(), gameStatistics.getAverageGameDuration())).toList());
-        Set<GameStatisticsJpaEntity> gameStatisticsJpaEntitySet = new HashSet<>(gameStatisticsJpaEntities);
-        MatchSessionJpaEntity matchSessionJpaEntity = new MatchSessionJpaEntity(matchSession.getId(), matchSession.getGameId().id(), gameStatisticsJpaEntitySet, matchSession.getStartTime(), matchSession.getEndTime(), matchSession.isActive(), matchSession.getWinner().name(), matchSession.getScore(), matchSession.getMovesMade());
+        List<GameStatisticsJpaEntity> gameStatisticsJpaEntities = matchSession.getGameStatistics().stream()
+                .map(gameStatistics -> {
+                    Optional<GameStatisticsJpaEntity> gameStatisticsJpaEntityOpt = gameStatisticsRepo.findByPlayerIdAndGameId(
+                            gameStatistics.getPlayerId().id(), gameStatistics.getGameId().id());
+                    if (gameStatisticsJpaEntityOpt.isEmpty()) {
+                        throw new IllegalArgumentException("GameStatistics not found");
+                    }
+                    return gameStatisticsJpaEntityOpt.get();
+                })
+                .collect(Collectors.toList());
+
+        MatchSessionJpaEntity matchSessionJpaEntity = new MatchSessionJpaEntity(
+                matchSession.getId(),
+                matchSession.getGameId().id(),
+                gameStatisticsJpaEntities,
+                matchSession.getStartTime(),
+                matchSession.getEndTime(),
+                matchSession.isActive(),
+                matchSession.getWinner().name(),
+                matchSession.getScoreP1(),
+                matchSession.getScoreP2(),
+                matchSession.getMovesMadeP1(),
+                matchSession.getMovesMadeP2()
+        );
         matchSessionRepo.save(matchSessionJpaEntity);
     }
 
-    public MatchSession toMatchSession(MatchSessionJpaEntity matchSessionJpaEntity) {
+    private MatchSession toMatchSession(MatchSessionJpaEntity matchSessionJpaEntity) {
         List<GameStatisticsJpaEntity> gameStatisticsJpaEntities = List.copyOf(matchSessionJpaEntity.getGameStatistics());
-        gameStatisticsDbAdapter.loadGameStatisticsByPlayerIdAndGameId(gameStatisticsJpaEntities.get(0).getPlayerId(), matchSessionJpaEntity.getGameId());
         List<GameStatistics> gameStatistics = gameStatisticsJpaEntities.stream().map(this::toGameStatistics).toList();
-        return new MatchSession(matchSessionJpaEntity.getId(), new GameId(matchSessionJpaEntity.getGameId()), gameStatistics, matchSessionJpaEntity.getStartTime(), matchSessionJpaEntity.getEndTime(), matchSessionJpaEntity.isActive(), Winner.valueOf(matchSessionJpaEntity.getWinner()), matchSessionJpaEntity.getScore(), matchSessionJpaEntity.getMovesMade());
+        return new MatchSession(
+                matchSessionJpaEntity.getId(),
+                new GameId(matchSessionJpaEntity.getGameId()),
+                gameStatistics,
+                matchSessionJpaEntity.getStartTime(),
+                matchSessionJpaEntity.getEndTime(),
+                matchSessionJpaEntity.isActive(),
+                Winner.valueOf(matchSessionJpaEntity.getWinner()),
+                matchSessionJpaEntity.getScoreP1(),
+                matchSessionJpaEntity.getScoreP2(),
+                matchSessionJpaEntity.getMovesMadeP1(),
+                matchSessionJpaEntity.getMovesMadeP2()
+        );
     }
 
     private GameStatistics toGameStatistics(GameStatisticsJpaEntity gameStatsEntity) {
